# robotic-arm-controller

./: .gitignore  Makefile  README.md  arduino_code.ino  flet.yaml  generate_icon.py  main.py  pyproject.toml  scripts.ps1  test_serial.py
app/: __init__.py
app/comm/: __init__.py  android_comm.py  base.py  serial_comm.py
app/gesture/: __init__.py  hand_tracker.py
app/ui/: __init__.py  gesture_panel.py  main_layout.py  servo_panel.py
