[project]
name = "robotic-arm-controller"
version = "0.1.0"
description = "Controlador multiplataforma para brazo robótico — Flet + MediaPipe + Bluetooth HC-05"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet>=0.85",
    "opencv-python==4.13.0.92",
    "mediapipe==0.10.35",
    "pyserial>=3.5",
]

[project.scripts]
robotic-arm = "main:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.flet]
org = "com.roboticarm"

[tool.flet.android]
permissions = [
    "android.permission.CAMERA",
    "android.permission.BLUETOOTH",
    "android.permission.BLUETOOTH_ADMIN",
    "android.permission.BLUETOOTH_CONNECT",
    "android.permission.BLUETOOTH_SCAN",
    "android.permission.ACCESS_FINE_LOCATION",
]
